--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "relay-starter-kit",
+  "name": "relay-roster",
+  "author": "Nicholas Neumann-Chun",
   "private": true,
-  "description": "A quick way to get up and running with Relay",
-  "repository": "facebook/relay-starter-kit",
-  "version": "0.1.0",
+  "description": "based on the Relay Starter Kit",
+  "version": "0.0.0",
   "scripts": {
     "start": "babel-node ./server.js",
     "update-schema": "babel-node ./scripts/updateSchema.js",
